force-app/main/default/objects/AARP_Org_Authentication__c/AARP_Org_Authentication__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AARP Org Authentication</label>
</CustomObject>