force-app/main/default/objects/AARP_Org_Authentication__c/fields/Authentication__c.field-meta.xml
<CustomField>
    <fullName>Authentication__c</fullName>
    <label>Authentication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>