force-app/main/default/objects/AARP_Org_Authentication__c/fields/CommunityURL__c.field-meta.xml
<CustomField>
    <fullName>CommunityURL__c</fullName>
    <label>CommunityURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>