force-app/main/default/objects/AARP_Org_Authentication__c/fields/DSOAccessURL__c.field-meta.xml
<CustomField>
    <fullName>DSOAccessURL__c</fullName>
    <label>DSOAccessURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>