force-app/main/default/objects/AARP_Org_Authentication__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>The current active token. A new token is retrieved by getToken if this token is 24 hours old and expired.</description>
    <inlineHelpText>The current active token. A new token is retrieved by getToken if this token is 24 hours old and expired.</inlineHelpText>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>