force-app/main/default/objects/AARP_Org_Authentication__c/fields/TokenDate__c.field-meta.xml
<CustomField>
    <fullName>TokenDate__c</fullName>
    <description>The datetime value for the last time an AARP.org token was refreshed by the getToken callout</description>
    <inlineHelpText>The datetime value for the last time an AARP.org token was refreshed by the getToken callout</inlineHelpText>
    <label>TokenDate</label>
    <type>DateTime</type>
</CustomField>